# dzongkha-autocorrect

./: .gitignore  pyproject.toml
src/dzongkha_autocorrect/: __init__.py  corpus.py  normalize.py  paths.py
src/dzongkha_autocorrect/cli/: reviewer.py  syllable_report.py
src/dzongkha_autocorrect/db/: __init__.py  connection.py  exceptions.py  repository.py  schema.py
src/dzongkha_autocorrect/rules/: __init__.py  loader.py  syllable.py
src/dzongkha_autocorrect/rules/data/: SOURCES.md
tests/: conftest.py  test_cli_reviewer.py  test_corpus.py  test_db_schema.py  test_gold_provenance.py  test_normalize.py  test_repository.py
tests/data/sample_raw/: sample_a.txt  sample_b.txt
tests/gold/: test_gold_regression.py
tests/rules/: test_loader.py  test_syllable.py
